# libzakgtkdecoder

./: .gitignore  Makefile.am  configure.ac  libzakgtkdecoder.pc.in
glade/: Makefile.am  zakgtkdecoder.xml
glade/icons/hicolor/16x16/actions/: Makefile.am
glade/icons/hicolor/22x22/actions/: Makefile.am
src/: Makefile.am  libzakgtkdecoder.h  zakgtkdecoder.c  zakgtkdecoder.h
tests/: Makefile.am  decoder.c  decoder_xml.c  decoder_xml.ui
